# aviation_pipeline

./: .gitignore  pyproject.toml
src/database/: schema.sql  seed_data.sql
src/generator/: aircraft.py  config.py  scenario.py
src/utils/: db_utils.py
